--- a/Project.toml
+++ b/Project.toml
@@ -10,5 +10,6 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 FASTX = "c2308a5c-f048-11e8-3e8a-31650f418d12"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+Mustache = "ffc61752-8dc7-55ee-8c37-f3e9cdd09e70"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
