--- a/test/data/Defaults.toml
+++ b/test/data/Defaults.toml
@@ -1,2 +1,4 @@
-[default]
-gene_initial_condition=5.0  # nM
+[problem_dictionary]
+DNA_initial_condition=5.0      # nM
+RNA_initial_condition=0.0      # nM
+PROTEIN_initial_condition=0.0   # nM
