--- a/Project.toml
+++ b/Project.toml
@@ -15,3 +15,13 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 Mustache = "ffc61752-8dc7-55ee-8c37-f3e9cdd09e70"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[compat]
+CSV = "^0.8.2"
+DataFrames = "^1"
+JSON = "^0.21.1"
+Mustache="^1"
+TOML="^1"
+BioSequences="^2"
+FASTX="^1"
+julia = "~1.6"
